# grafiek.zig

./: README.md  build.zig  build.zig.zon
python/: model.onnx  pyproject.toml
python/examples/mnist-8/mnist-8/: model.zig
python/examples/mnist-8/mnist-8/weights/: Parameter193.zig  Parameter193_reshape1_shape.zig  Parameter194.zig  Parameter5.zig  Parameter6.zig  Parameter87.zig  Parameter88.zig  Pooling160_Output_0_reshape0_shape.zig
python/src/python/: benchmark.py  convert.py  make.py
src/: OperatorType.zig  Tensor.zig  TensorType.zig  giga.zig  main  main.zig  mnist-8.onnx:Zone.Identifier  model.zig  root.zig  simple.zig  utils.zig
src/core/: Make.zig  utils.zig
src/models/: simple.zig
src/operator/: Abs.zig  Acos.zig  Acosh.zig  Add.zig  Asin.zig  Asinh.zig  Atan.zig  Atanh.zig  Ceil.zig  Floor.zig  Identity.zig  MatMul.zig  Mul.zig  OperatorType.zig  Reshape.zig  Sigmoid.zig  Tan.zig  Tanh.zig  Transpose.zig
src/tensor/: Tensor.zig
