[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "onnx>=1.17.0",
    "onnxruntime>=1.19.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python"]
